k8s-deploy/localhost/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rails
  labels:
    app: parliamentary-questions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parliamentary-questions
  template:
    metadata:
      labels:
        app: parliamentary-questions
    spec:
      containers:
        - name: parliamentary-questions-rails-app
          image: beccapearce/parliamentary-questions_web:latest
          imagePullPolicy: IfNotPresent
          command: ['sh', '-c', "bundle exec rails s"]
          ports:
            - containerPort: 3000
        - name: postgres
          image: 'postgres:10'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume-mount
              mountPath: /var/lib/postgresql/data
        volumes:
          - name: postgres-volume-mount
            persistentVolumeClaim:
              claimName: postgres-pvc
