k8s-deploy/localhost/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: parliamentary-questions-service
spec:
  selector:
    app: parliamentary-questions
  ports:
  - name: parliamentary-questions-rails-app
    protocol: TCP
    port: 3000
    targetPort: 3000
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
